--- a/src/main/resources/templates/th/admin/chat/chatList.html
+++ b/src/main/resources/templates/th/admin/chat/chatList.html
@@ -22,13 +22,15 @@
             <thead>
             <tr class="list-group list-group-horizontal">
                 <th style="width:70%">회원아이디</th>
-                <th style="width:30%">상담시작</th>
+                <th style="width:20%">입장시간</th>
+                <th style="width:10%">상담시작</th>
             </tr>
             </thead>
             <tbody>
             <tr class="list-group list-group-horizontal" th:each="roomList: ${roomLists}">
                 <td th:text="${roomList.memberId}" style="width:60%"></td>
-                <td style="width:30%">
+                <td th:text="${roomList.time}" style="width:20%"></td>
+                <td style="width:10%">
                     <input th:if="${roomList.count}==1" type="button" class="btn btn-primary" th:value="상담시작"
                            th:data-id="${roomList.chatId}" id="createRoom" onclick="enterRoom()"/>
                 </td>
@@ -41,7 +43,7 @@
 
             function enterRoom() {
                 var url = "/enter/" + chatId;
-                window.open(url, "new_popup", "scrollbars=no, width=350, height=400, menubar=false, location=false");
+                window.open(url, "new_popup", "scrollbars=no, width=400, height=450, menubar=false, location=false");
             }
         </script>
     </div>
