--- a/src/main/resources/templates/th/main/storeMain.html
+++ b/src/main/resources/templates/th/main/storeMain.html
@@ -10,32 +10,38 @@
         <link rel="stylesheet" th:href="@{/css/mainContent.css}">
     </th:block>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css"/>
     <script type="text/javascript" th:inline="javascript">history.scrollRestoration = "auto"</script>
 </head>
 <body>
 <div layout:fragment="content">
-    <a href="#" onclick="enterChat(createRoom)">
+    <div id="store-index">
         <div class="fixed-btn-area" sec:authorize="hasAnyRole('ROLE_MEMBER', 'ROLE_USER')">
-            <div class="fixed-wrap">
-                <form name="createRoom"/>
-                    <svg class="bi bi-chat-dots" style="color: #fff" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
+            <a href="#" onclick="enterChat(createRoom)">
+                <div class="fixed-wrap">
+                    <form name="createRoom"/>
+                    <svg class="bi bi-chat-dots" style="color: #fff" width="1.5em" height="1.5em" viewBox="0 0 16 16"
+                         fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                              d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
                         <path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
                     </svg>
-            </div>
+                </div>
+            </a>
         </div>
-    </a>
-    <div id="store-index">
-        <section class="container store-index-section store-index-recommend-list" th:style="${showRecommend}!=null ? 'display:block' : 'display:none'">
+
+
+        <section class="container store-index-section store-index-recommend-list"
+                 th:style="${showRecommend}!=null ? 'display:block' : 'display:none'">
             <h1>추천 상품</h1>
             <div class="recommendItem__header">
-            <p class="recommendItem__header__summary">최근 보신 상품과 비슷한 상품을 추천해드립니다.</p>
+                <p class="recommendItem__header__summary">최근 보신 상품과 비슷한 상품을 추천해드립니다.</p>
             </div>
             <div class="virtualized-list row" style="padding-top: 0px; transform: translateY(0px);">
                 <tr th:each="item : ${recommendList}">
                     <div class="col-6 col-md-3 product-item-wrap">
-                        <article class="production-item"><a class="production-item__overlay" th:href="@{/productions/productDetails(productNo=${item.productNo})}"></a>
+                        <article class="production-item"><a class="production-item__overlay"
+                                                            th:href="@{/productions/productDetails(productNo=${item.productNo})}"></a>
                             <div class="production-item-image production-item__image">
                                 <img class="image" alt="" th:src="@{'/uploadImg/'+${item.productMainImg}}" srcset="">
                             </div>
@@ -45,7 +51,8 @@
                                     <span class="production-item__header__name" th:text="${item.productName}"></span>
                                 </h1>
                                 <span class="production-item-price">
-                                    <span class="production-item-price__price" th:text="${#numbers.formatInteger(item.customerPrice, 3, 'COMMA')}"></span>
+                                    <span class="production-item-price__price"
+                                          th:text="${#numbers.formatInteger(item.customerPrice, 3, 'COMMA')}"></span>
                                 </span>
                             </div>
                         </article>
@@ -53,96 +60,128 @@
                 </tr>
             </div>
         </section>
-        <section class="container store-index-section store-index-product-list"><h1>인기 상품</h1>
-            <div class="virtualized-list row" style="padding-top: 0px; transform: translateY(0px);">
-                <tr th:each="products : ${mainList}">
-                    <div class="col-6 col-md-3 product-item-wrap">
-                        <article class="production-item"><a class="production-item__overlay" th:href="@{/productions/productDetails(productNo=${products.productNo})}"></a>
-                            <div type="hidden" class="productNo" data-no="${products.productNo}"></div>
-                            <div class="production-item-image production-item__image">
-                                <img class="image" alt="" th:src="@{'/uploadImg/'+${products.productMainImg}}"
-                                     srcset="">
-                            </div>
-                            <div class="production-item__content">
-                                <h1 class="production-item__header">
-                                    <span class="production-item__header__brand" th:text="${products.sellerName}"></span>
-                                    <span class="production-item__header__name" th:text="${products.productName}"></span>
-                                </h1>
-                                <span class="production-item-price">
-                            <span class="production-item-price__price" th:text="${#numbers.formatInteger(products.customerPrice, 3, 'COMMA')}"></span>
-                        </span>
-                            </div>
-                        </article>
-                    </div>
-                </tr>
+        <section class="container store-index-section store-index-product-list">
+            <h1>인기 상품</h1>
+            <div th:id="autoScroll" class="virtualized-list row" style="padding-top: 0px; transform: translateY(0px);">
+                <div class="col-6 col-md-3 product-item-wrap" th:each="products : ${mainList}">
+                    <article class="production-item">
+                        <a class="production-item__overlay"
+                           th:href="@{/productions/productDetails(productNo=${products.productNo})}"></a>
+                        <div type="hidden" id="productNo" th:data-no="${products.productNo}"></div>
+                        <div class="production-item-image production-item__image">
+                            <img class="image" alt="" th:src="@{'/uploadImg/'+${products.productMainImg}}"
+                                 srcset="">
+                        </div>
+                        <div class="production-item__content">
+                            <h1 class="production-item__header">
+                                    <span class="production-item__header__brand"
+                                          th:text="${products.sellerName}"></span>
+                                <span class="production-item__header__name"
+                                      th:text="${products.productName}"></span>
+                            </h1>
+                            <!--<span class="production-item-price">-->
+                            <span class="production-item-price__price"
+                                  th:text="${#numbers.formatInteger(products.customerPrice, 3, 'COMMA')}"></span>
+                            <!--</span>-->
+                        </div>
+                    </article>
+                </div>
             </div>
-
         </section>
     </div>
-
     <script type="text/javascript">
-                function enterChat(formName){
-            window.open("","new_popup","scrollbars=no, width=400, height=450, menubar=false, location=false");
-            formName.target="new_popup";
-            formName.action="/chat";
-            formName.method="post";
+        function enterChat(formName) {
+            window.open("", "new_popup", "scrollbars=no, width=400, height=450, menubar=false, location=false");
+            formName.target = "new_popup";
+            formName.action = "/chat";
+            formName.method = "post";
             formName.submit();
         }
-    </script>
-    <!--<script type="text/javascript">
-        var lastScrollTop=0;
-        $(window).scroll(function(){
-            var currentScrollTop=$(window).scrollTop();
 
-            if(currentScrollTop-lastScrollTop>0){
-                lastScrollTop=currentScrollTop;
-            } else{
-                lastScrollTop=currentScrollTop;
+        /*$(window).scroll(function () {
+            if($(window).scrollTop()==$(document).height()-$(window).height()){
+                $('.product-item-wrap').append('<article class="production-item"><a class="production-item__overlay"th:href="@{/productions/productDetails(productNo='+'[[${mainList.productNo}]]'
+                    +')}"></a><div class="production-item-image production-item__image">'
+                    +'<img class="image" alt="" th:src="@{\'/uploadImg/\'+'+'[[${mainList.productMainImg}]]'+'}" srcset=""></div>'
+                    +'<div class="production-item__content"><h1 class="production-item__header"><span class="production-item__header__brand" th:text="'+'[[${mainList.sellerName}]]'+'"></span>'
+                    +'<span class="production-item__header__name" th:text="'+'[[${mainList.productName}]]'+'"></span></h1>'
+                    +'<span class="production-item-price__price" th:text="'+'${#numbers.formatInteger([[mainList.customerPrice]], 3, \'COMMA\')'+'}"></span></div></article>')
             }
+        });*/
 
-            var lastProductNo=$(".productNo:last").attr("data-no");
-            //console(lastProductNo);
 
-            $.ajax({
-                type:'post',
-                url:'infiniteScrollDown',
-                headers: {
-                    "Content-Type" : "application/json",
-                    "X-HTTP-Method-Override" : "POST"
-                },
-                dataType: 'json',
-                data: JSON.stringify({
-                    productNo : lastProductNo
-                }),
+    </script>
 
-                success: function(data){
-                    var str="";
-                    if(data!=""){
-                        $(data).each(
-                            function(){
-                                console.log(this);
-                                str+='<article class="production-item"><a class="production-item__overlay" th:href="@{/productions/productDetails(productNo='+'this.productNo'+')}"></a>'
-                                    +'<div type="hidden" class="productNo" th:value='+'this.productNo'+'></div>'
-                                    +'<div class="production-item-image production-item__image">'
-                                    +'<img class="image" alt="" th:src="@{\'/uploadImg/\'+'+'this.productMainImg'+'}" srcset="">'
-                                    +'</div>'
-                                    +'<div class="production-item__content">'+'<h1 class="production-item__header">'
-                                    +'<span class="production-item__header__brand" th:text="'+'this.sellerName' +'"></span>'
-                                    +'<span class="production-item__header__name" th:text="'+'this.productName'+'"></span>'
-                                    +'</h1>'+'<span class="production-item-price">'
-                                    +'<span class="production-item-price__price" th:text="'+'#numbers.formatInteger(this.customerPrice, 3, \'COMMA\')'+'"></span>'
-                                    +'</span>'+'</div>'+'</article>';
-                            });
-                        $('.production-item').empty();
-                        $('.scrollLocation').after(str);
-                    } else{
-                        alert("실패");
-                    }
+    <!--/*$(document).ready(function () {
+    $('#autoScroll').jscroll({
+    autoTrigger: true,
+    loadingHtml:
+    '<article class="production-item"><a class="production-item__overlay"th:href="@{/productions/productDetails(productNo='+'[[${mainList.productNo}]]'
+                    +')}"></a><div class="production-item-image production-item__image">'
+    +'<img class="image" alt="" th:src="@{\'/uploadImg/\'+'+'[[${mainList.productMainImg}]]'+'}" srcset=""></div>'
+    +'<div class="production-item__content"><h1 class="production-item__header"><span class="production-item__header__brand" th:text="'+'[[${mainList.sellerName}]]'+'"></span>'
+        +'<span class="production-item__header__name" th:text="'+'[[${mainList.productName}]]'+'"></span></h1>'
+        +'<span class="production-item-price__price" th:text="'+'${#numbers.formatInteger([[mainList.customerPrice]], 3, \'COMMA\')'+'}"></span></div></article>',
 
+    nextSelector: 'a.nextPage:last'
+    });
+    });*/-->
+
+    <!-- < script
+    type = "text/javascript" >
+    var lastScrollTop = 0;
+    $(window).scroll(function () {
+        var currentScrollTop = $(window).scrollTop();
+
+        if (currentScrollTop - lastScrollTop > 0) {
+            lastScrollTop = currentScrollTop;
+        } else {
+            lastScrollTop = currentScrollTop;
+        }
+
+        var lastProductNo = $("#productNo:last").attr("data-no");
+        //console(lastProductNo);
+
+        $.ajax({
+            type: 'post',
+            url: 'infiniteScrollDown',
+            headers: {
+                "Content-Type": "application/json",
+                "X-HTTP-Method-Override": "POST"
+            },
+            dataType: 'json',
+            data: JSON.stringify({
+                productNo: lastProductNo
+            }),
+
+            success: function (data) {
+                var str = "";
+                if (data != "") {
+                    $(data).each(
+                        function () {
+                            console.log(this);
+                            str += '<article class="production-item"><a class="production-item__overlay" th:href="@{/productions/productDetails(productNo=' + 'this.productNo' + ')}"></a>'
+                                + '<div type="hidden" class="productNo" th:value=' + 'this.productNo' + '></div>'
+                                + '<div class="production-item-image production-item__image">'
+                                + '<img class="image" alt="" th:src="@{\'/uploadImg/\'+' + 'this.productMainImg' + '}" srcset="">'
+                                + '</div>'
+                                + '<div class="production-item__content">' + '<h1 class="production-item__header">'
+                                + '<span class="production-item__header__brand" th:text="' + 'this.sellerName' + '"></span>'
+                                + '<span class="production-item__header__name" th:text="' + 'this.productName' + '"></span>'
+                                + '</h1>' + '<span class="production-item-price">'
+                                + '<span class="production-item-price__price" th:text="' + '#numbers.formatInteger(this.customerPrice, 3, \'COMMA\')' + '"></span>'
+                                + '</span>' + '</div>' + '</article>';
+                        });
+                    $('.production-item').empty();
+                    $('.scrollLocation').after(str);
+                } else {
+                    alert("실패");
                 }
-            });
 
-        })
+            }
+        });
+
+    })
     </script>-->
 </div>
 </body>
