무한스크롤 완료

--- a/src/main/resources/static/css/mainContent.css
+++ b/src/main/resources/static/css/mainContent.css
@@ -281,9 +281,9 @@
     }
 }
 
-.store-index-section {
+/*.store-index-section {
     margin-top: 40px
-}
+}*/
 
 .store-index-section > h1 {
     color: #000;
